SEO improvments template fix
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@158 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/site_specific/aspx_templates/demo.Master
+++ b/OneMainWeb/site_specific/aspx_templates/demo.Master
@@ -13,9 +13,7 @@
 <!-- Custom styles for this template -->
 <link href="/_css/demo.css" rel="stylesheet">
 
-<script>
-	languageId = <%: System.Threading.Thread.CurrentThread.CurrentCulture.LCID.ToString() %>;
-</script>
+<Controls:JavascriptVars ID="JavascriptVars1" runat="server" />
 </head>
 <body role="document">
     <form id="form1" runat="server">
