multiple file upload
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@167 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/OneMain.Master
+++ b/OneMainWeb/OneMain.Master
@@ -15,6 +15,8 @@
     <!-- Custom styles for this template -->
     <link href="/adm/css/dashboard.css" rel="stylesheet">
 
+    <link href="/Scripts/dropzone/css/dropzone.css" rel="stylesheet">
+
 
     <script>
         tracing = <%: TracingFlag %>;
@@ -49,7 +51,7 @@
     <asp:contentplaceholder id="Head" runat="server" />
 </head>
 <body>
-    <form id="form1" runat="server">
+    <form id="form1" runat="server" class="dropzone">
 
 		
 		<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
