--- a/OneMainWeb/OneMain.Master
+++ b/OneMainWeb/OneMain.Master
@@ -100,6 +100,7 @@
 	 </div>
     </div>
     <script src="/ckeditor4/ckeditor.js"></script>
+    <%: System.Web.Optimization.Scripts.Render("~/Bundles/BootstrapJS") %>  
     <%: System.Web.Optimization.Scripts.Render("~/Bundles/AdmJS") %>  
     </form>
 </body>
