--- a/OneMainWeb/adm/css/bootstrap.css
+++ b/OneMainWeb/adm/css/bootstrap.css
@@ -1,4 +1,4 @@
-/*!
+﻿/*!
  * Bootstrap v3.2.0 (http://getbootstrap.com)
  * Copyright 2011-2014 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
@@ -263,8 +263,8 @@ th {
 @font-face {
   font-family: 'Glyphicons Halflings';
 
-  src: url('../fonts/glyphicons-halflings-regular.eot');
-  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('/adm/fonts/glyphicons-halflings-regular.eot');
+  src: url('/adm/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/adm/fonts/glyphicons-halflings-regular.woff') format('woff'), url('/adm/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('/adm/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
