--- a/OneMainWeb/adm/css/dashboard.css
+++ b/OneMainWeb/adm/css/dashboard.css
@@ -36,7 +36,7 @@ body {
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
-    top: 51px;
+    top: 59px;
     bottom: 0;
     left: 0;
     z-index: 1000;
@@ -108,3 +108,8 @@ body {
 
 /*Custom*/
 .title {position: relative; display: block; font-weight: bold; padding: 10px 20px; border-bottom: 1px #ddd solid;}
+.navbar-inverse {background: #20a8d8; color: #FFF;}
+.navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav>li>a {color: #FFF;}
+.navbar-nav>li>a {line-height: 21px;}
+.nav>li:nth-child(4)>a, .nav>li:nth-child(4)>a:hover {background-color:#1e8fc6!important;}
+.tall input[type="text"] {padding: 5px;}
