git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@223 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/site_specific/aspx_templates/demo.Master
+++ b/OneMainWeb/site_specific/aspx_templates/demo.Master
@@ -68,6 +68,7 @@
         </div> <!-- /container -->	
 
         <Controls:BundleRender ID="BundleRender4" runat="server" Path="~/Bundles/BootstrapJS" IsScript="true" />
+		<Controls:BundleRender ID="BundleRender5" runat="server" Path="~/Bundles/_js" IsScript="true" />
     </form>
 </body>
 </html>
