--- a/OneMainWeb/OneMain.Master
+++ b/OneMainWeb/OneMain.Master
@@ -77,7 +77,10 @@
                 </div>
             </nav> 
             <div class="clear-cache">
-                <asp:LinkButton ID="Button1" runat="server" OnClick="Button1_Click" Text="Clear cache" CssClass="btn btn-info" />
+                <asp:HyperLink ID="HyperLinkPreview" runat="server" Text="Clear cache on preview" CssClass="btn btn-default btn-sm" />
+            </div>
+            <div class="clear-cache">
+                <asp:HyperLink ID="HyperLinkProduction" runat="server" Text="Clear cache on production" CssClass="btn btn-info btn-sm" />
             </div>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
