--- a/OneMainWeb/OneMain.Master
+++ b/OneMainWeb/OneMain.Master
@@ -17,8 +17,9 @@
     </style>
 
     <script>
-
-        $(document).ready(function () {
+        
+        $(function () {
+            console.log("%cOne.NET DOM ready.", "color:green; background-color:yellow");
             $(".nav-sidebar ul li a").each(function () {
                 var anchor = $(this);
                 var attrHref = anchor.attr('href');
