min-height set to 500px plus made it resize as you type more
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@276 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/adm/codemirror/codemirror.css
+++ b/OneMainWeb/adm/codemirror/codemirror.css
@@ -3,11 +3,14 @@
 .CodeMirror {
   /* Set height, width, borders, and global font properties here */
   font-family: monospace;
-  height: 300px;
+  border: 1px solid #eee;
+  height: auto;
+  min-height:500px;
 }
 .CodeMirror-scroll {
   /* Set scrolling behaviour here */
-  overflow: auto;
+  overflow-y: hidden;
+  overflow-x: auto;
 }
 
 /* PADDING */
