one.net scaffold some minor improvments
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@329 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/OneMain.Master
+++ b/OneMainWeb/OneMain.Master
@@ -73,7 +73,7 @@
                     ItemWrap="True" StaticDisplayLevels="3" IncludeStyleBlock="false" EnableViewState="false" />
   
                <div class="nav nav-sidebar">
-                    <span>Table</span>
+                    <span>Custom editing</span>
                     <cc2:VirtualTableList runat="server" ID="VirtualTableList1"></cc2:VirtualTableList>
                 </div>
             </nav> 
