lightbox for textcontent experimental
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@387 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/OneMain.Master
+++ b/OneMainWeb/OneMain.Master
@@ -19,7 +19,7 @@
     <script>
         
         $(function () {
-            console.log("%cOne.NET DOM ready.", "color:green; background-color:yellow");
+            trace("%cOne.NET DOM ready.", "color:green; background-color:yellow");
             $(".nav-sidebar ul li a").each(function () {
                 var anchor = $(this);
                 var attrHref = anchor.attr('href');
